--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
+    "prisma": "^5.16.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
